<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_noticias"
        android:enabled="true"
        android:icon="@drawable/round_bookmarks_24"
        android:title="@string/bottom_noticias" />
    <item
        android:id="@+id/navigation_dados"
        android:enabled="true"
        android:icon="@drawable/round_data_usage_24"
        android:title="@string/bottom_dados" />
    <item
        android:id="@+id/navigation_estimativa"
        android:enabled="true"
        android:icon="@drawable/round_date_range_24"
        android:title="@string/bottom_estimativa" />
    <item
        android:id="@+id/navigation_sobre"
        android:enabled="true"
        android:icon="@drawable/ic_logo"
        android:title="@string/bottom_sobre" />
</menu>